Thu Jan 31 19:21:31 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CDR_Test.cpp:
          Test CDR_Size::write_boolean_array, according to Coverity
          this method was not tested

Wed Jan 30 11:58:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * bin/valgrind.supp:
          Add a supression for a faulty system zlib.

Mon Jan 28 23:33:25 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_sunos5_g++.GNU:

          Define _POSIX_PTHREAD_SEMANTICS is threads=1,
          making this config similar to SunCC.

Mon Jan 28 07:55:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-macosx-mountainlion.h:
        * ace/config-macosx-mountain-lion.h:
        * include/makeinclude/platform_macosx_mountainlion.GNU:
        * include/makeinclude/platform_macosx_mountain_lion.GNU:
          Renamed mountain-lion to mountainlion to simplify packaging

Tue Jan 22 12:28:19 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Size.h:
          Doxygen changs

        * tests/FlReactor_Test.cpp:
          Unicode fixes

Mon Jan 21 08:24:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Corrected link

Thu Jan 17 12:25:40 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.control:
          Fixed depencency on libssl-dev, thanks to Michael Ganz
          <michael_ganz at t-online dot de> for reporting this

Thu Jan 17 12:23:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sig_Handler.cpp:
          Layout changes

        * docs/bczar/bczar.html:
          Updated packages

        * html/Stats/index.shtml:
          Added another page

Fri Jan  4 21:52:14 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_linux_clang.GNU:

          Added clang command-line option required to build TAO.
